--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,6 +1,6 @@
 masters = portage-stable chromiumos eclass-overlay ime
 profile-formats = portage-2 profile-default-eapi
 profile_eapi_when_unspecified = 5-progress
-repo-name = fydeos
+repo-name = openfyde
 thin-manifests = true
 use-manifests = strict
