--- a/make.conf
+++ b/make.conf
@@ -16,3 +16,6 @@ COLLISION_IGNORE="/lib/firmware
 CHROME_DEV_FLAGS="--load-media-router-component-extension=1"
 
 CHROME_ROOT=/mnt/host/source/fydeos/chromium
+
+FYDEOS_PREBUILT_PKGS_HOST_URL="https://fydeos-binaries.oss-cn-beijing.aliyuncs.com/packages"
+FYDEOS_GIT_HOST_BASE_URL="ssh://git@gitlab.fydeos.xyz"
