rename FYDEOS_PREBUILT_PKGS_HOST_URL and FYDEOS_GIT_HOST_BASE_URL
* FYDEOS_PREBUILT_PKGS_HOST_URL -> OPENFYDE_PREBUILT_PKGS_HOST_URL
* FYDEOS_GIT_HOST_BASE_URL -> OPENFYDE_GIT_HOST_URL

--- a/make.conf
+++ b/make.conf
@@ -17,5 +17,5 @@ CHROME_DEV_FLAGS="--load-media-router-component-extension=1"
 
 CHROME_ROOT=/mnt/host/source/fydeos/chromium
 
-FYDEOS_PREBUILT_PKGS_HOST_URL="https://fydeos-binaries.oss-cn-beijing.aliyuncs.com/packages"
-FYDEOS_GIT_HOST_BASE_URL="https://gitee.com/openFyde"
+OPENFYDE_PREBUILT_PKGS_HOST_URL="https://fydeos-binaries.oss-cn-beijing.aliyuncs.com/packages"
+OPENFYDE_GIT_HOST_URL="https://gitee.com/openFyde"
