remove load-media-router-component-extension flag

--- a/make.conf
+++ b/make.conf
@@ -12,8 +12,8 @@ COLLISION_IGNORE="/lib/firmware
     /etc/tlsdate/tlsdated.conf 
     /usr/share/chromeos-assets/input_methods/input_methods.txt
     /usr/share/cros/init/tcsd-pre-start.sh"
-## enable chrome cast feature.
-CHROME_DEV_FLAGS="--load-media-router-component-extension=1"
+# enable chrome cast feature. not necessary since r96
+# CHROME_DEV_FLAGS="--load-media-router-component-extension=1"
 
 CHROME_ROOT=/mnt/host/source/fydeos/chromium
 
