--- a/make.conf
+++ b/make.conf
@@ -18,4 +18,4 @@ COLLISION_IGNORE="/lib/firmware
 CHROME_ROOT=/mnt/host/source/fydeos/chromium
 
 OPENFYDE_PREBUILT_PKGS_HOST_URL="https://fydeos-binaries.oss-cn-beijing.aliyuncs.com/packages"
-OPENFYDE_GIT_HOST_URL="https://gitee.com/openFyde"
+OPENFYDE_GIT_HOST_URL="https://github.com/openFyde"
