Adjust OPENFYDE_GIT_HOST_URL for gitee
Signed-off-by: Su Yue <glass@fydeos.io>

--- a/make.conf
+++ b/make.conf
@@ -18,5 +18,5 @@ COLLISION_IGNORE="/lib/firmware
 CHROME_ROOT=/mnt/host/source/openfyde/chromium
 
 OPENFYDE_PREBUILT_PKGS_HOST_URL="https://fydeos-binaries.oss-cn-beijing.aliyuncs.com/packages"
-OPENFYDE_GIT_HOST_URL="https://github.com/openFyde"
+OPENFYDE_GIT_HOST_URL="https://gitee.com/openFyde"
 EXTRA_GN_ARGS="enable_log_error_not_reached=false"
