--- a/chromeos-base/auto-expand-partition/files/auto-expand-partition.conf
+++ b/chromeos-base/auto-expand-partition/files/auto-expand-partition.conf
@@ -13,6 +13,6 @@ script
     if [ -n "$(udevadm info -q path $stateful_partition | grep usb)" ]; then
         /usr/sbin/expand-partition.sh -d $stateful_partition > /tmp/auto-expand-partition 2>&1
     fi
-    touch /mnt/stateful_partition/.autoexpanded
+    touch /mnt/stateful_partition/.autoexpanded # croslint: disable:
   fi
 end script
