add fydeos-hardware-tuning openfyde project name for updater

--- a/chromeos-base/fydeos-hardware-tuner/files/fydeos-hwtuner-updater.conf
+++ b/chromeos-base/fydeos-hardware-tuner/files/fydeos-hwtuner-updater.conf
@@ -10,10 +10,11 @@ oom score 0
 start on shill-connected
 
 script
-	updater_bin="/usr/share/fydeos_shell/scripts_updater/updater.sh"
-	tuner_dir="/usr/share/hwtuner-script"
-	if [ -x "$updater_bin" ] && [ -d "$tuner_dir" ]; then
-		tmp_log="/tmp/hwtuner-updater.log"
-		"$updater_bin" -t "$tuner_dir" > "$tmp_log" 2>&1
-	fi
+  updater_bin="/usr/share/fydeos_shell/scripts_updater/updater.sh"
+  tuner_dir="/usr/share/hwtuner-script"
+  openfyde_project_name="fydeos-hardware-tuning"
+  if [ -x "$updater_bin" ] && [ -d "$tuner_dir" ]; then
+    tmp_log="/tmp/hwtuner-updater.log"
+    "$updater_bin" -t "$tuner_dir" -n "$openfyde_project_name" > "$tmp_log" 2>&1
+  fi
 end script
