--- a/chromeos-base/auto-expand-partition/files/auto-expand-partition.conf
+++ b/chromeos-base/auto-expand-partition/files/auto-expand-partition.conf
@@ -8,11 +8,12 @@ task
 oom score -100
 
 script
-  if [ ! -f /mnt/stateful_partition/.autoexpanded ]; then
+  auto_expanded_mark="/mnt/stateful_partition/unencrypted/preserve/.autoexpanded"
+  if [ ! -f "$auto_expanded_mark" ]; then
     stateful_partition=$(findmnt -n -o source /mnt/stateful_partition)
     if [ -n "$(udevadm info -q path $stateful_partition | grep usb)" ]; then
         /usr/sbin/expand-partition.sh -d $stateful_partition > /tmp/auto-expand-partition 2>&1
     fi
-    touch /mnt/stateful_partition/.autoexpanded # croslint: disable:
+    touch "$auto_expanded_mark" # croslint: disable:
   fi
 end script
