--- a/make.conf
+++ b/make.conf
@@ -1,15 +1,15 @@
 USE="${USE} dlc"
-USE="${USE} include_vmlinuz" 
+USE="${USE} include_vmlinuz"
 USE="${USE} allow_consumer_kiosk -ime -lacros_rootfs"
-USE="${USE} os_install_service"
+USE="${USE} os_install_service cpus"
 CHROME_ORIGIN=LOCAL_SOURCE
 FEATURES="-collision-protect -collision-detect -protect-owned -sandbox -usersandbox"
-COLLISION_IGNORE="/lib/firmware 
-    /etc/issue 
-    /etc/chrome_dev.conf 
-    /etc/init/ui.override 
-    /etc/hosts 
-    /etc/tlsdate/tlsdated.conf 
+COLLISION_IGNORE="/lib/firmware
+    /etc/issue
+    /etc/chrome_dev.conf
+    /etc/init/ui.override
+    /etc/hosts
+    /etc/tlsdate/tlsdated.conf
     /usr/share/chromeos-assets/input_methods/input_methods.txt
     /usr/share/cros/init/tcsd-pre-start.sh"
 # enable chrome cast feature. not necessary since r96
