fix chrome crash when pressing PageDown in RIME

--- a/make.conf
+++ b/make.conf
@@ -19,3 +19,4 @@ CHROME_ROOT=/mnt/host/source/openfyde/chromium
 
 OPENFYDE_PREBUILT_PKGS_HOST_URL="https://fydeos-binaries.oss-cn-beijing.aliyuncs.com/packages"
 OPENFYDE_GIT_HOST_URL="https://github.com/openFyde"
+EXTRA_GN_ARGS="enable_log_error_not_reached=false"
