--- a/make.conf
+++ b/make.conf
@@ -19,4 +19,5 @@ CHROME_ROOT=/mnt/host/source/openfyde/chromium
 
 OPENFYDE_PREBUILT_PKGS_HOST_URL="https://fydeos-binaries.oss-cn-beijing.aliyuncs.com/packages"
 OPENFYDE_GIT_HOST_URL="https://github.com/openFyde"
-EXTRA_GN_ARGS="enable_log_error_not_reached=false"
+# EXTRA_GN_ARGS="enable_log_error_not_reached=false"
+EXTRA_GN_ARGS="is_openfyde=true"
