--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,4 +1,4 @@
-masters = portage-stable chromiumos eclass-overlay fyde-eclass ime
+masters = portage-stable chromiumos eclass-overlay fyde-eclass
 profile-formats = portage-2 profile-default-eapi
 profile_eapi_when_unspecified = 5-progress
 repo-name = openfyde
