change the timing of service fydeos-scripts-mounter

--- a/chromeos-base/fydeos-scripts-mounter/files/init/fydeos-scripts-mounter.conf
+++ b/chromeos-base/fydeos-scripts-mounter/files/init/fydeos-scripts-mounter.conf
@@ -1,7 +1,7 @@
 description     "Mount scripts from stateful partition to rootfs"
 author          "fangzhou@fydeos.io"
 
-start on starting boot-services
+start on started system-services
 
 task
 
