delay the execution of fydeos-collect-log task

--- a/chromeos-base/openfyde-utils/files/init/fydeos-collect-log.conf
+++ b/chromeos-base/openfyde-utils/files/init/fydeos-collect-log.conf
@@ -5,7 +5,7 @@
 description     "Collect fydeos log"
 author          "fangzhou@fydeos.io"
 
-start on started system-services
+start on starting ui
 
 oom score -100
 
