run fydeos-collect-log after fydeos-scripts-mounter
wait for required tools for collecting log

--- a/chromeos-base/openfyde-utils/files/init/fydeos-collect-log.conf
+++ b/chromeos-base/openfyde-utils/files/init/fydeos-collect-log.conf
@@ -5,7 +5,7 @@
 description     "Collect fydeos log"
 author          "fangzhou@fydeos.io"
 
-start on starting ui
+start on stopped fydeos-scripts-mounter
 
 oom score -100
 
